<resources>
    <string name="share_preferences" translatable="false">pref</string>
    <string name="list_in_play" translatable="false">currentList</string>
    <string name="app_name">要音乐</string>
    <string name="app_name_super">耀音乐</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="nav_header_title">要音乐</string>
    <string name="nav_header_subtitle">版本 0.1</string>
    <string name="nav_header_subtitle_super">版本 超级0.1</string>

    <string name="app_bar_search_button">搜索</string>

    <string name="tab_song">歌曲</string>
    <string name="tab_album">专辑</string>
    <string name="tab_artist">歌手</string>
    <string name="tab_songlist">歌单</string>
    <string name="search_bar_hint">亲, 把关键字写这儿~</string>

    <string name="nav_bar_test">测试</string>
    <string name="nav_bar_clear_playlist">测试</string>
    <string name="nav_bar_about">关于</string>

    <string name="nav_bar_reference">来源</string>
    <string name="nav_bar_reference_yiting">一听音乐</string>
    <string name="nav_bar_reference_qianqian">千千音乐</string>
    <string name="nav_bar_reference_kuwo">酷我音乐</string>
    <string name="nav_bar_reference_qq">QQ音乐</string>
    <string name="nav_bar_reference_wangyi">网易云音乐</string>

    <string name="nav_bar_language">语言</string>
    <string name="nav_bar_auto">自动</string>
    <string name="nav_bar_cn" translatable="false">中文</string>
    <string name="nav_bar_en" translatable="false">English</string>

    <string name="img_cover_desc">封面</string>
    <string name="list_header_clear_history">忘掉这些黑历史</string>
    <string name="list_header_clear_history_success">我忘了, 亲却还记得</string>
    <string name="list_footer_more">想要更多</string>
    <string name="list_footer_no_more">给不了亲更多了</string>
    <string name="task_null_result">想要，却离亲太远</string>

    <string name="nav_bar_reference_error">请亲选择打开姿势</string>

    <string name="about_activity_model">型号</string>
    <string name="about_activity_code">代码</string>
    <string name="about_activity_author">作者</string>
    <string name="about_activity_source">源码</string>
    <string name="about_activity_notice">软件用途</string>
    <string name="about_activity_author_name" translatable="false">jinyaoMa</string>
    <string name="about_activity_github" translatable="false">https://github.com/jinyaoMa/YaoMusic</string>
    <string name="about_activity_mmp">学习</string>

    <string name="welcome_reference_question" translatable="false">请选择一种打开姿势</string>
    <string name="welcome_reference_question_en" translatable="false">Please select a resource reference</string>
    <string name="welcome_language_question" translatable="false">请选择提示语言的种类</string>
    <string name="welcome_language_question_en" translatable="false">Please select a language</string>
    <string name="welcome_language_answer_cn" translatable="false">帅气的中文</string>
    <string name="welcome_language_answer_en" translatable="false">English</string>
    <string name="welcome_prev" translatable="false">&lt;</string>
    <string name="welcome_next" translatable="false">&gt;</string>
    <string name="welcome_finish" translatable="false">开始食用</string>
    <string name="welcome_finish_en" translatable="false">Start</string>

    <string name="super_yao_on_click_1">干嘛呢?</string>
    <string name="super_yao_on_click_2">你再怎么点我也没用呀...</string>
    <string name="super_yao_on_click_3">我有句MMP不知当讲不当讲</string>
    <string name="super_yao_on_click_4">尼玛，再点我下试试?!!</string>
    <string name="super_yao_on_click_5">1分钟超级模式启动</string>

    <string name="list_item_song_count">首歌</string>

    <string name="list_item_songs_empty">换个来源吧，亲</string>
    <string name="list_item_songs_error">湖务器离亲太远</string>

    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="song_play_error_3">超时了，这歌不存在的！</string>
    <string name="song_play_error_2">米有版权！</string>
    <string name="song_play_error_1">再坚持5秒就好了！</string>
    <string name="song_play_error">您所选择的歌曲正在撒娇中，\n请稍后再播</string>

    <string name="mini_player_leftTime" translatable="false">99:99</string>
    <string name="mini_player_passTime" translatable="false">00:00</string>

    <string name="dialog_name_playlist">起个表名</string>
    <string name="dialog_save_playlist">收了这个表</string>
    <string name="dialog_clear_playlist">扔了这个表</string>

    <string name="dialog_playlist_question">删了这个表</string>
    <string name="dialog_playlist_yes">确认</string>
    <string name="dialog_playlist_no">取消</string>

    <string name="main_fragment_empty">没时间了，快上车！</string>
</resources>
